# rsblas

./: Cargo.toml  LICENSE.txt  README.md  header-for-latex.html
doc/: search-index.js  settings.html  source-files.js
doc/lib/: all.html  fn.drot.html  fn.srot.html  index.html  sidebar-items.js
doc/lib/drot/: fn.drot.html
doc/lib/srot/: fn.srot.html
doc/src/lib/: drot.rs.html  lib.rs.html  macros.rs.html  srot.rs.html
src/: asum.rs  axpy.rs  copy.rs  dasum.rs  dot.rs  drot.rs  lib.rs  macros.rs  rot.rs  rotg.rs  sasum.rs  scal.rs  srot.rs  sscal.rs  swap.rs  utils.rs
