[package]
name = "rsblas"
version = "0.1.4"
authors = ["xiongzh <xiongzhen@xiongzh.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "BLAS in Rust."
repository = "https://github.com/xiongzhen/rsblas"
homepage = "https://xiongzh.com"
[dependencies]

